# webRAG

./: .cursorignore  .env  .gitignore  AUDIT_SCRIPTS_CONSOLIDATION.md  BREAKING_POINT_ANALYSIS.md  CONTAINER_INSIGHTS_AND_QUEUE_RENAME.md  DEPLOYMENT_STABILITY_FIXES.md  HANDOFF.md  MEMORY_INCREASE_SUMMARY.md  RABBITMQ_TROUBLESHOOTING.md  README.md  STABILITY_FIXES_SUMMARY.md  audit-results.json  audit-stability-comparison.md  audit_results.json  conftest.py  docker-compose.yml  ecs-task-definition.json  gateway-r46-containers.json  pytest.ini  stable-config-20260206.json
agent/: .dockerfile  pyproject.toml  requirements.txt
agent/app/: agent.py  agent_worker.py  basic_cli.py  connector.py  connector_chroma.py  connector_config.py  connector_http.py  connector_llm.py  connector_search.py  interface_agent.py  local_embedding_function.py  main.py  observation.py  prompt_builder.py  tick_output.py
agent/tests/: agent_test.py  agent_worker_test.py  connector_chroma_test.py  connector_http_test.py  connector_llm_test.py  connector_search_test.py  connector_test.py  prompt_builder_test.py  tick_output_test.py
ideaengine/: LICENSE  README.md  pyproject.toml
ideaengine/docs/: AGENT_ARCHITECTURE.md  IDEA_ENGINE.md  IDEA_ENGINE_FEATURES.md
ideaengine/docs/benchmarks/: gemini_2_5_collapse_investigation.md  phase_0_summary.md
ideaengine/ideaengine/: __init__.py  _shared.py  agent_io.py  connector_base.py  connector_browser.py  connector_chroma.py  connector_http.py  connector_llm.py  connector_search.py  got_operations.py  idea_branch_pair.py  idea_dag.py  idea_dag_settings.json  idea_dag_settings.py  idea_engine.py  idea_finalize.py  idea_memory.py  llm_backends.py  model_costs.py  observation.py  solver.py  telemetry.py  trace_recorder.py
ideaengine/ideaengine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ideaengine/ideaengine/idea_policies/: __init__.py  action_constants.py  actions.py  base.py  data_contracts.py  decomposition.py  evaluation.py  expansion.py  merge.py  post_expansion_hooks.py  selection.py
ideaengine/ideaengine/idea_policies/extra_actions/: __init__.py  arxiv.py  datetime_now.py  github.py  hacker_news.py  json_path.py  pack.py  pypi.py  regex_extract.py  unit_convert.py  url_metadata.py  weather.py  wikipedia.py
ideaengine/ideaengine/prompts/: loader.py
ideaengine/ideaengine/prompts/defaults/: evaluation_system_prompt.md  evaluation_user_prompt.md  expansion_planning_addendum.md  expansion_system_prompt.md  expansion_user_prompt.md  final_system_prompt.md  final_user_prompt.md  merge_system_prompt.md
ideaengine/tests/: data_contracts_test.py  extra_actions_test.py  got_backtrack_test.py  prompts_loader_test.py  semantic_dedup_test.py  solver_normalize_test.py
(+1183 files in other folders)
