[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ideaengine"
version = "0.1.0"
description = "Graph-of-Thought DAG executor for LLM research tasks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ideaengine contributors" }]
keywords = ["llm", "agent", "graph-of-thought", "rag", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "openai>=1.57.0",
    "redis>=5.0",
    "urllib3>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
chroma    = ["chromadb>=0.5"]
browser   = ["undetected-chromedriver>=3.5", "selenium>=4.0"]
testing   = ["pytest>=8.0", "pytest-asyncio>=0.23"]
benchmarks = ["matplotlib>=3.10", "pandas>=2.0", "seaborn>=0.13"]
all = [
    "anthropic>=0.40.0",
    "chromadb>=0.5",
    "undetected-chromedriver>=3.5",
    "selenium>=4.0",
]

[project.urls]
Homepage      = "https://github.com/your-org/ideaengine"
Documentation = "https://github.com/your-org/ideaengine/tree/main/docs"
Issues        = "https://github.com/your-org/ideaengine/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ideaengine*"]

[tool.setuptools.package-data]
ideaengine = [
    "idea_dag_settings.json",
    "prompts/defaults/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
